default/chrome/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  labels:
    app: chrome
spec:
  selector:
    matchLabels:
      app: chrome
  replicas: 1
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
        - name: chrome
          image: ich777/chrome:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          resources:
            requests:
              memory: "1250Mi"
              cpu: "1250m"
            limits:
              memory: "2000Mi"
              cpu: "2000m"
      volumes:
        - name: dshm
          emptyDir:
              medium: Memory
