default/chrome/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chrome
  labels:
    app: chrome
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: web
      protocol: TCP
  selector:
    app: chrome
  loadBalancerIP: 192.168.78.16
