default/chrome/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrome
spec:
  rules:
  - host: chrome.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chrome
            port:
              number: 8080
